# TRADINGBOT

./: .env.example  .gitignore  README.md  XLM_USDT_15m_1y.csv  ai_signal_generator.py  backtest.py  bot.py  config.py  download_historical_data.py  exchange.py  logger.py  main.py  model_info.json  notifier.py  pyproject.toml  render.yaml  requirements.txt  run_all.py  run_web_and_bot.sh  sentiment.py  shared_state.py  signals.py  state.py  strategy.pine  test_bot_tick.py  test_signals.py  trading_state.json  train_and_push.bat  train_model.py  web_status.json  websocket_client.py  websocket_manager.py
ai_bot_dashboard/: dashboard.py  main.py
ai_bot_dashboard/static/: style.css
ai_bot_dashboard/templates/: index.html
strategies/: ai_strategy.py
utils/: binance_client.py  telegram_notifier.py
web/: main.py
web/static/: style.css
web/templates/: index.html
