[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "*"
ccxt = "*"
requests = "*"
fastapi = "*"
uvicorn = "*"
jinja2 = "*"
python-multipart = "*"
numpy = "1.24.3"
gunicorn = "*"
pandas = "1.5.3"
pandas-ta = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
